# briefing-bot

./: .env.example  .gitignore  README.md  install_daily_briefing_cron.sh  notes.txt  pyproject.toml  requirements.txt  run_daily_briefing_cron.sh
.claude/: CLAUDE.md  settings.local.json
.claude/rules/: documentation.md
.claude/skills/write-a-skill/: SKILL.md
.github/workflows/: ci.yml
.hermes/skills/news-briefing/: SKILL.md  __main__.py
.hermes/skills/news-briefing/scripts/: entrypoint.py
.hermes/skills/news-briefing/scripts/references/: hermes-cron-setup.md  pipeline-architecture.md  troubleshooting.md
config/: daily_ap.yaml  recipients.example.yaml  retention.yaml
prompts/: article_summarizer.md  briefing_synthesizer.md  relevance_evaluator.md
sample_outputs/: briefing.md  email_body.txt
scripts/: cleanup_outputs.py  config_loader.py  discover_articles.py  evaluate_articles.py  extract_articles.py  render_briefing.py  run_daily_briefing.py  send_briefing_email.py  summarize_articles.py
tests/: conftest.py
tests/e2e/: test_pipeline.py
tests/fixtures/: ap_section.html
tests/integration/: test_cleanup.py  test_discover.py  test_email.py  test_evaluate.py  test_extract.py  test_render.py  test_summarize.py
tests/unit/: test_config.py  test_discover.py  test_filters.py  test_models.py  test_render.py  test_run_daily_briefing.py
