[project]
name = "hermes-newsbot"
version = "0.1.0"
description = "Daily news briefing bot: discovers, extracts, evaluates, summarizes, and emails AP News stories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "lxml>=5.0",
    "firecrawl-py>=2.0",
    "openai>=1.30",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.19.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=scripts",
    "--cov-report=term-missing",
    "--import-mode=importlib",
    "-m", "not live",
]
markers = [
    "live: hits real external APIs (Firecrawl/OpenAI/SMTP); skipped unless RUN_LIVE_TESTS=1 and selected with -m live",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "scripts"
